# smb-dataplatformv2

./: .dockerignore  .gitignore  GEMINI.md  README.md  ingestion.Dockerfile  main.py  pyproject.toml  transformation.Dockerfile
.dlt/: config.toml  secrets.toml
dbt_profiles/: profiles.yml
dbt_project/: dbt_project.yml
dbt_project/macros/: safe_divide.sql
dbt_project/macros/tests/: test_not_negative.sql
dbt_project/models/marts/: rpt_kpis.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_meta_ads.sql  stg_orders.sql  stg_tiktok_ads.sql
dbt_project/tests/: assert_contribution_margin_logic.sql
dlt_pipelines/mock_data/: meta_faker.py  tiktok_faker.py
dlt_pipelines/shopify/: shopify_pipeline.py
duckdb_files/: dbt_metrics.duckdb  facebook_ads.duckdb  mock_metrics.duckdb  shopify_data_raw.duckdb  tiktok_ads.duckdb
exports/: int_daily_ad_spend.csv  int_daily_orders.csv  rpt_kpis.csv
mock_data/: facebook_ads.duckdb  meta_ads_mock.json
pipelines/: run_pipeline.py
pipelines/facebook_ads/: facebook_ads_pipeline.py
pipelines/mock_data/: meta_faker.py  tiktok_faker.py
pipelines/shopify/: shopify_pipeline.py
pipelines/tiktok_ads/: tiktok_ads_pipeline.py
scripts/: export_to_csv.py  get_duckdb_schema.py  mock_metrics.py  populate_shopify_sales.py
terraform/: main.tf  terraform.tfvars  terraform.tfvars.example
tests/: test_dlt_pipelines.py  test_integration_shopify_pipeline.py  test_mock_data_meta.py  test_mock_data_tiktok.py  test_shopify_pipeline.py
viz/: evidence.config.yaml
viz/.evidence/customization/: .profile.json
viz/pages/: daily-health-check.md  index.md  monthly-financial-overview.md  monthly-recap.md  weekly-tactical-allocation.md
viz/sources/metrics/: connection.yaml  rpt_kpis.sql
workflows/: main_workflow.yaml
