[project]
name = "smb-dataplatformv2"
version = "0.1.0"
description = "Data Platform as a Service for SMB E-commerce"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]

# Dependencies for the Ingestion Pipeline (Cloud Run Job A)
etl = [
    "dlt[bigquery,duckdb]>=0.4.0",
    "pandas>=2.0.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-bigquery-storage>=2.0.0",
]

# Dependencies for Transformation (Cloud Run Job B)
dbt = [
    "dbt-core>=1.7.0",
    "dbt-bigquery>=1.7.0",
    "dbt-duckdb>=1.7.0",
]

# Dependencies for Local Dev & Testing
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",  # Super fast linter
    "black>=24.0.0",
    "faker>=18.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dlt_pipelines"]

# Configure Pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
]

[tool.poe.tasks]
# --- 1. Quality & Testing ---
test = "pytest tests/"
test-integration = { cmd = "pytest -m integration", help = "Run integration tests" }
lint = "ruff check ."
format = "ruff format ."
check = ["format", "lint", "test"]  # Runs all 3 in sequence, use: uv run poe check

# --- 2. Ingestion (dlt) ---
# Runs the pipeline script. 
# We use 'cmd' to ensure it runs with the 'etl' extras context if needed.
run-pipeline = { cmd = "python dlt_pipelines/shopify/shopify_pipeline.py", help = "Run the local data pipeline" }
run-pipeline-gcp = { cmd = "python dlt_pipelines/shopify/shopify_pipeline.py --destination bigquery", help = "Run the ingestion pipeline to GCP BigQuery" }

# --- 3. Transformation (dbt) ---
# dbt commands need to run inside the dbt_project folder
dbt-deps = { cmd = "dbt deps --profiles-dir ../dbt_profiles", cwd = "dbt_project", help = "Install dbt packages" }
dbt-debug = { cmd = "dbt debug --profiles-dir ../dbt_profiles", cwd = "dbt_project", help = "Test dbt connection" }
dbt-run = { cmd = "dbt run --profiles-dir ../dbt_profiles", cwd = "dbt_project", help = "Run dbt models" }
dbt-test = { cmd = "dbt test --profiles-dir ../dbt_profiles", cwd = "dbt_project", help = "Run dbt data tests" }
dbt-build = { cmd = "dbt build --profiles-dir ../dbt_profiles", cwd = "dbt_project", help = "Run dbt models and tests" }
dbt-clean = { cmd = "dbt clean --profiles-dir ../dbt_profiles", cwd = "dbt_project", help = "Clean dbt target and packages directories" }

# --- 4. AI Bot (Local) ---
run-bot = { cmd = "python ai_bot/src/main.py", help = "Run the Telegram bot locally" }

# --- 5. Infrastructure (Terraform) ---
tf-init = { cmd = "terraform init", cwd = "terraform", help = "Initialize Terraform" }
tf-plan = { cmd = "terraform plan", cwd = "terraform", help = "Preview infra changes" }
tf-apply = { cmd = "terraform apply", cwd = "terraform", help = "Apply infra changes" }

# --- 6. Deployment (GCP) ---
# These assume you have gcloud CLI installed and authenticated
deploy-bot = { shell = "gcloud run deploy telegram-bot --source ai_bot/ --region us-central1 --allow-unauthenticated" }